ldapadmin/src/main/webapp/console/app/styles/app.scss
$lightblue: #009FE3;

body {
  padding-top : 2em;
}
@media (min-width: 768px) {
  .panel .panel-body {
    min-height : 22em;
  }
}
a {
  color : $lightblue;
}

groups {
  input {
    margin-bottom: 1em;
  }
  .create-btn {
    display: flex;
    .btn {
      flex-grow : 1;
      margin    : 0 .5em;
    }
  }
}

.container > .nav {
  margin-bottom: 2em;
}

section {
  .nav {
    background: $lightblue;
    @media (min-width: 992px) {
      margin : 0 -15px;
      border : none;
    }
    border        : 1px solid rgb(221, 221, 221);
    border-radius : 5px;
    padding       : 1em 0;
    li a {
      border-radius : 0;
      color         : #fff;
    }
    li a:hover,
    li.active a:hover,
    li.active a {
      background  : $lightblue;
      font-weight : bold;
    }
  }
  .groups-title {
    margin-top    : 0;
    padding-top   : .1em;
    margin-bottom : 1em;
  }
}

.pagination > li > a {
  cursor  : pointer;
  padding : 6px 9px;
}

// ANALYTICS
.analytics {
  hr {
    margin-top: 2em;
  }
  .stats-conf {
    margin: -.45em 0 0 1em;
  }
  .chosen-container {
    float: right
  }
  .chosen-single {
    margin-top : -.45em;
  }
}

// MESSAGES
.user-messages {
  select {
    margin-bottom : 0.25em;
    margin-top    : -0.25em;
  }
}

.stats {
  .pull-right {
    margin-top : -.75em;
  }
  table {
    margin-top : 1em;
  }
}

// HOME
.home {
  .alerts {
    .alert {
      margin-bottom : 0;
      border-radius : 0;
      .glyphicon,
      a {
        color: white;
      }
      .manage {
        font-weight : bold;
      }
      .glyphicon {
        font-size : 2.7em;
        &:first-of-type {
          font-size   : 2.3em;
          margin-left : -.5em;
        }
      }
      &.alert-info {
        background-color : $lightblue;
        border-color     : $lightblue;
        padding          : 30px 15px;
        font-weight      : bold;
        a {
          font-size: 1.2em;
        }
      }
      &.alert-danger {
        background-color : #E40615;
        border-color     : #E40615;
      }
      &.alert-warning {
        background-color : #F29200;
        border-color     : #F29200;
      }
      &:first-child {
        border-top-left-radius  : 4px;
        border-top-right-radius : 4px;
      }
      &:last-child {
        border-bottom-left-radius  : 4px;
        border-bottom-right-radius : 4px;
      }
    }
  }
  .jumbotron {
    margin-top   : 2em;
    padding      : 24px;
    h1 {
      font-size  : 48px;
    }
    h1, p {
      text-align : center;
    }
    dir-pagination-controls {
      display    : block;
      text-align : center;
    }
    table {
      table-layout : fixed;
      th, td {
        width         : 40%;
        overflow      : hidden;
        text-overflow : ellipsis;
        white-space   : nowrap;
        &:first-of-type {
          width    : 20%;
        }
      }
    }
  }
}

// GROUPS
.groups {
  @media (min-width: 992px) {
    border-right: 2px solid $lightblue;
  }
  .alert-info {
    background-color : $lightblue;
    border-color     : $lightblue;
    a:not(.btn) {
      color          : white;
    }
  }
}
.users {
  @media (min-width: 992px) {
    margin: 0 -15px;
  }
  em {
    color: #888;
  }
  .filter-users {
    width: 25%;
  }
  .glyphicon-remove-sign {
    position : absolute;
    right    : 1.5em;
    top      : 0.7em;
    &:hover {
      cursor: pointer;
    }
  }
}

// STATS
@media (min-width: 992px) {
  .stats-conf {
    width: 20%;
    float: right;
  }
}
.stats {
  .progress {
    width  : 10em;
    margin : 5em auto;
    height : 2em;
  }
  .progress-bar {
    border-radius    : 4px;
    background-color : $lightblue;
  }
  .alert {
    margin-top : 2em;
  }
}

// LOGS
.logs {
  .reset {
    margin-top : -.75em;
  }
  .chosen-container {
    float: right
  }
  .chosen-drop {
    width : 21em;
  }
  table {
    th, td {
      width: 27%;
      &:first-of-type {
        width: 19%;
      }
      select {
        max-width: 50%;
      }
    }
    select {
      width : auto;
    }
    date {
      select {
        max-width     : none;
        height        : 30px;
        line-height   : 30px;
        padding       : 5px 10px;
        font-size     : 12px;
        line-height   : 1.5;
        border-radius : 3px;
      }
    }
  }
  .header-filter > span {
    display     : inline-block;
    padding: .5em;
  }
}

// CHARTS
.chartist {
  height: 25em;
}
.ct-label {
  font-size: 1rem;
}
.ct-barlabel {
  font-size: 1rem;
  fill: white;
}
.ct-series-a
.ct-bar,
.ct-series-a
.ct-line,
.ct-series-a
.ct-point,
.ct-series-a
.ct-slice-donut
{
  stroke: $lightblue;
}

// CHOSEN
.chosen-container-multi .chosen-choices {
  border-radius : 4px;
  padding       : 2px 5px;
  li.search-choice {
    background : #f5f5f5;
    box-shadow : none;
  }
}
.chosen-container {
  * {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !important;
  }
  .chosen-drop {
    border-top    : 1px solid #aaa;
    border-radius : 4px;
    top           : calc(100% + 2px);
  }
  .chosen-single {
    background : white;
    padding    : 4px 0 4px 8px;
    height     : 33px;
    div b {
      background-position: 0 6px;
    }
  }
}
.chosen-container-active.chosen-with-drop .chosen-single {
  background : white;
  div b {
    background-position: -18px 6px;
  }
}

[flash-message] {
  position    : absolute;
  width       : 20em;
  left        : 50%;
  margin-left : -10em;
  top         : 1em;
  z-index     : 2000;
}

